# aoc-template

./: .gitignore  Cargo.toml  README.md
.cargo/: config
src/: lib.rs  template.rs
src/utils/: constants.rs  mod.rs
utils/download/src/: main.rs
utils/scaffold/src/: main.rs
