[package]
name = "aoc"
description = "template for advent of code"
readme = "README.md"
version = "25.0.0"
edition = "2021"
license = "MIT"
authors = ["Matej Janežič <janezic.mj@gmail.com>"]
repository = "https://github.com/janezicmatej/aoc-template.git"
default-run = "aoc"

[dependencies]
dotenvy = "0.15.6"
elves = "0.2.0"
hashbrown = "0.13.1"
hex-literal = "0.3.4"
itertools = "0.10.5"
lazy_static = "1.4.0"
pico-args = "0.5.0"
regex = "1.7.0"
reqwest = "0.11.13"
tokio = { version = "1.23.0", features = ["full"] }
