[package]
name = "aoc"
description = "template for advent of code"
readme = "README.md"
version = "27.0.0"
edition = "2021"
license = "MIT"
authors = ["Matej Janežič <janezic.mj@gmail.com>"]
repository = "https://github.com/janezicmatej/aoc-template.git"

[dependencies]
dotenvy = "0.15.6"
elves = "0.2.0"
hashbrown = "0.14.2"
hex-literal = "0.4.1"
itertools = "0.12.0"
lazy_static = "1.4.0"
pico-args = "0.5.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
