[package]
name = "aoc"
description.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# many cool stuff for iterators
itertools = "0.12.0"
# faster hashing algorithms for hashmaps and hashsets
hashbrown = "0.14.2"
# my library with some sorters and parses
elves = "0.2.0"

[workspace]

members = ["utils/download", "utils/scaffold"]

[workspace.package]
description = "template for advent of code"
readme = "README.md"
version = "33.0.0"
edition = "2021"
license = "MIT"
authors = ["Matej Janežič <janezic.mj@gmail.com>"]
repository = "https://github.com/janezicmatej/aoc-template.git"

